UPDATE : 포팅 매뉴얼 이미지

--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -3,27 +3,28 @@
 ## 기술 스택
 
 - springboot initializer 2.7.10
-    - java11
+  - java11
 - front
-    - node v16.19.1
-    - npm v8.19.3
-    - react version v5.0.1
+  - node v16.19.1
+  - npm v8.19.3
+  - react version v5.0.1
 - flask
-    - python v3.9.10
+  - python v3.9.10
 
 ## 사용 외부 서비스 정보
 
 - Kakao api
-    - 소셜 로그인
-        - 토큰 반환
-        - JWT 유효성 검사(access_token, refresh_token)
-        - 카카오 데이터 반환 요청
-    - karlo
-        - 인공지능 그림 데이터 요청
+
+  - 소셜 로그인
+    - 토큰 반환
+    - JWT 유효성 검사(access_token, refresh_token)
+    - 카카오 데이터 반환 요청
+  - karlo
+    - 인공지능 그림 데이터 요청
 
 - Chat Gpt api
-    - 단어 추천
-    - 추천 받은 단어와 연관된 5개의 추가 단어 추천
+  - 단어 추천
+  - 추천 받은 단어와 연관된 5개의 추가 단어 추천
 
 ## 환경 변수 및 주요 내용
 
@@ -111,60 +112,56 @@ CMD [ "python3", "app.py" ]
 
 ## DB 덤프 파일
 
-[Dump파일.zip](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Dump%25ED%258C%258C%25EC%259D%25BC.zip)
+[Dump파일.zip] ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Dump.zip)
 
 ## 시연 시나리오
 
 1. 시작 화면(소셜 로그인 및 회원가입)
-- 이미지
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled.png)
-    
-    - 처음 로그인 버튼을 누르는 사람은 DB 데이터를 조회 후 회원 가입 페이지로 유도
-    - 이미 한번 등록한 경험이 있는 사람인 경우 로그인 후 메인 페이지로 이동
 
-1. 카카오톡 회원가입 
 - 이미지
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled%201.png)
-    
-    - 카카오 소셜 로그인 api를 통해 만약 로그인 기록이 남아있는 유저인 경우 바로 메인 페이지로 이동하게한다.
-    - 만약 로그인 기록에 대한 세션이 만료 되었다면 다시 로그인 해야한다
-    
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled.png)
+  - 처음 로그인 버튼을 누르는 사람은 DB 데이터를 조회 후 회원 가입 페이지로 유도
+  - 이미 한번 등록한 경험이 있는 사람인 경우 로그인 후 메인 페이지로 이동
 
-1. 메인화면 
-    1. 마일리지, 티어
-    2. 랭킹 
+1. 카카오톡 회원가입
+
 - 이미지
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled%202.png)
-    
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled1.png)
+  - 카카오 소셜 로그인 api를 통해 만약 로그인 기록이 남아있는 유저인 경우 바로 메인 페이지로 이동하게한다.
+  - 만약 로그인 기록에 대한 세션이 만료 되었다면 다시 로그인 해야한다
+
+1. 메인화면
+   1. 마일리지, 티어
+   2. 랭킹
+
+- 이미지
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled2.png)
 
 1. 싱글 플레이 시작
-    1. Gitbash 게임
-    2. Locker 게임
-    3. Type 게임
-    4. Ip 게임
-    5. Remind 게임 - 
-    6. Tissue 게임
-    7. Emoji 게임
-    8. Id 카드 게임
-    9. Seating 게임
-    10. Puzzle 게임
-    11. Attendance 게임
-    12. Difference 게임
+
+   1. Gitbash 게임
+   2. Locker 게임
+   3. Type 게임
+   4. Ip 게임
+   5. Remind 게임 -
+   6. Tissue 게임
+   7. Emoji 게임
+   8. Id 카드 게임
+   9. Seating 게임
+   10. Puzzle 게임
+   11. Attendance 게임
+   12. Difference 게임
 
 1. 멀티 플레이 시작
+
 - 이미지
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled%203.png)
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled%204.png)
-    
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled3.png)
+
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled4.png)
 
 1. 카톡 공유
+
 - 이미지
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled%205.png)
-    
-    ![Untitled](%E1%84%91%E1%85%A9%E1%84%90%E1%85%B5%E1%86%BC%20%E1%84%86%E1%85%A2%E1%84%82%E1%85%B2%E1%84%8B%E1%85%A5%E1%86%AF%20e190cf744b2f48acbedd855440118eec/Untitled%206.png)
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled5.png)
+
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled6.png)
