UPDATE : 포팅 매뉴얼 이미지 수정

--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -119,14 +119,14 @@ CMD [ "python3", "app.py" ]
 1. 시작 화면(소셜 로그인 및 회원가입)
 
 - 이미지
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled.png){: width="900"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled.png)
   - 처음 로그인 버튼을 누르는 사람은 DB 데이터를 조회 후 회원 가입 페이지로 유도
   - 이미 한번 등록한 경험이 있는 사람인 경우 로그인 후 메인 페이지로 이동
 
 1. 카카오톡 회원가입
 
 - 이미지
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled1.png){: width="900"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled1.png)
   - 카카오 소셜 로그인 api를 통해 만약 로그인 기록이 남아있는 유저인 경우 바로 메인 페이지로 이동하게한다.
   - 만약 로그인 기록에 대한 세션이 만료 되었다면 다시 로그인 해야한다
 
@@ -135,7 +135,7 @@ CMD [ "python3", "app.py" ]
    2. 랭킹
 
 - 이미지
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled2.png){: width="900"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled2.png)
 
 1. 싱글 플레이 시작
 
@@ -155,13 +155,13 @@ CMD [ "python3", "app.py" ]
 1. 멀티 플레이 시작
 
 - 이미지
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled3.png){: width="900"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled3.png)
 
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled4.png){: width="900"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled4.png)
 
 1. 카톡 공유
 
 - 이미지
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled5.png){: width="900"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled5.png)
 
-  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled6.png){: width="400"}
+  ![Untitled](./%ED%8F%AC%ED%8C%85%20%EB%A7%A4%EB%89%B4%EC%96%BC/Untitled6.png)
